// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`write-categories one category, no page with image should write a category/readme.md file using the category template 1`] = `
"---
title: Category | macOS defaults
head:
  - - meta
    - property: \\"og:title\\"
      content: macOS defaults > Category
  - - meta
    - name: \\"description\\"
      content: \\"This is a description of the category. It can contain &quot;quotes&quot; and markdown.\\\\n\\\\n- a list item\\"
  - - meta
    - property: \\"og:description\\"
      content: \\"This is a description of the category. It can contain &quot;quotes&quot; and markdown.\\\\n\\\\n- a list item\\"
  - - meta
    - property: \\"twitter:card\\"
      content: \\"summary\\"
  - - meta
    - property: \\"twitter:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.webp\\"
  - - meta
    - property: \\"og:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.jpg\\"
---
# Category

<img
  src=\\"./category.png\\" alt=\\"A screenshot of the Category\\"
  width=\\"740\\" height=\\"80\\" style=\\"height: auto\\"
/>

This is a description of the category. It can contain \\"quotes\\" and markdown.

- a list item

## Keys

"
`;

exports[`write-categories one category, one page should write a category/readme.md file using the category template 1`] = `
"---
title: Category | macOS defaults
head:
  - - meta
    - property: \\"og:title\\"
      content: macOS defaults > Category
  - - meta
    - name: \\"description\\"
      content: \\"Category description.\\"
  - - meta
    - property: \\"og:description\\"
      content: \\"Category description.\\"
  - - meta
    - property: \\"twitter:card\\"
      content: \\"summary\\"
  - - meta
    - property: \\"twitter:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.webp\\"
  - - meta
    - property: \\"og:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.jpg\\"
---
# Category

Category description.

## Keys

- [Page](./page.html)
"
`;

exports[`write-categories one category, two pages should write a category/readme.md file using the category template 1`] = `
"---
title: Category | macOS defaults
head:
  - - meta
    - property: \\"og:title\\"
      content: macOS defaults > Category
  - - meta
    - name: \\"description\\"
      content: \\"Category description.\\"
  - - meta
    - property: \\"og:description\\"
      content: \\"Category description.\\"
  - - meta
    - property: \\"twitter:card\\"
      content: \\"summary\\"
  - - meta
    - property: \\"twitter:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.webp\\"
  - - meta
    - property: \\"og:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.jpg\\"
---
# Category

Category description.

## Keys

- [Page 1](./page1.html)
- [Page 2](./page2.html)
"
`;

exports[`write-categories two categories, one page in each should write a category1/readme.md file using the category template 1`] = `
"---
title: Category 1 | macOS defaults
head:
  - - meta
    - property: \\"og:title\\"
      content: macOS defaults > Category 1
  - - meta
    - name: \\"description\\"
      content: \\"Category 1 description.\\"
  - - meta
    - property: \\"og:description\\"
      content: \\"Category 1 description.\\"
  - - meta
    - property: \\"twitter:card\\"
      content: \\"summary\\"
  - - meta
    - property: \\"twitter:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.webp\\"
  - - meta
    - property: \\"og:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.jpg\\"
---
# Category 1

Category 1 description.

## Keys

- [Page](./page.html)
"
`;

exports[`write-categories two categories, one page in each should write a category2/readme.md file using the category template 1`] = `
"---
title: Category 2 | macOS defaults
head:
  - - meta
    - property: \\"og:title\\"
      content: macOS defaults > Category 2
  - - meta
    - name: \\"description\\"
      content: \\"Category 2 description.\\"
  - - meta
    - property: \\"og:description\\"
      content: \\"Category 2 description.\\"
  - - meta
    - property: \\"twitter:card\\"
      content: \\"summary\\"
  - - meta
    - property: \\"twitter:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.webp\\"
  - - meta
    - property: \\"og:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.jpg\\"
---
# Category 2

Category 2 description.

## Keys

- [Page](./page.html)
"
`;
